# mpc5741_cmake_vscode

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: powerpc-eabivle.cmake
include/: edma.h  gpio.h
src/: Hello_World.c  edma.c  gpio.c  platform_inits.c
